app/styles/settings/_variables.scss
/* Colors
   ========================================================================== */

$graphics: '/* @echo ASSETS_PATH */';

$light-green: #20ce6f;                                   //
$ocean-blue: #2276ac;                                //
$midnight-blue: #2c3e50;                              //
$royal-purple: #673285;
$dolphin-grey: #95a5a6;
$sky-blue: #7ab5da;
$error-red: #E74C3C;

$black: #36342D;
$dark-grey: #4A4A4A;
$grey: #8C8C8C;
$light-grey: #C4C4C4;
$lighter-grey: #8C8C8C;
$lightest-grey: #E2DFDF;
$background-white: #F8F8F8;

/* typography */
$root-font-size: 14px;

$base-font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
$base-font-light: 300;
$base-font-italic: 400i;
$base-font-regular: 400;
$base-font-semibold: 600;
$base-font-bold: 700;
$base-font-weight: $base-font-regular;
$base-font-size: 1rem;
$base-line-height: 1.5;

$code-font-family: 'Inconsolata', monospace;
$code-font-size: 1rem;
$code-line-height: 1;

